# aoc

2023/: Cargo.toml
2023/gleam/: README.md  gleam.toml  manifest.toml
2023/gleam/src/: aoc2023.gleam  solution.gleam
2023/gleam/src/days/: day01.gleam  day04.gleam
2023/haskell/: aoc2023.cabal
2023/haskell/app/: Main.hs
2023/haskell/src/: AdventOfCode.hs
2023/haskell/src/Days/: Day01.hs  Day09.hs
2023/rust/src/: main.rs  solution.rs
2023/rust/src/days/: day02.rs  day04.rs  day06.rs  day08.rs  day10.rs  day11.rs  mod.rs
2023/src/: main.rs
2023/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
2024/haskell/: CHANGELOG.md  aoc2024.cabal
2024/haskell/src/: AdventOfCode.hs  Utilities.hs
2024/haskell/src/Days/: Day01.hs  Day02.hs
2024/rust/: Cargo.toml
2024/rust/src/: main.rs  utils.rs
2024/rust/src/days/: day01.rs  day06.rs  mod.rs
