cabal-version:      3.0
name:               aoc2023
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Neal Wang
maintainer:         nealwang.sh@protonmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable aoc2023
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
