cabal-version:      3.0
name:               aoc2023
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/mathletedev/aoc
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Neal Wang
maintainer:         nealwang.sh@protonmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AdventOfCode,
                      Days.Day01
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2023
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        aoc2023

    hs-source-dirs:   app
    default-language: Haskell2010
